Fixed #27: Bitmap not shown in wxButton using xrc on Windows 10.

--- a/.gitignore
+++ b/.gitignore
@@ -4,17 +4,17 @@
 !.clang-format
 !.editorconfig
 
-# Compiled Object files
+# Compiled object files
 *.slo
 *.lo
 *.o
 *.obj
 
-# Precompiled Headers
+# Precompiled headers
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
+# Compiled dynamic libraries
 *.so
 *.dylib
 *.dll
@@ -22,7 +22,7 @@
 # Fortran module files
 *.mod
 
-# Compiled Static libraries
+# Compiled static libraries
 *.lai
 *.la
 *.a
@@ -36,6 +36,11 @@ HA/
 *.exe
 *.out
 *.app
+
+# Zip files
+*.tar.bz2
+*.tar.gz
+*.zip
 
 # Resources
 *.icns
